[project]
name = "vcsi"
version = "7.0.16"
description = "Create video contact sheets, thumbnails, screenshots"
authors = [{ name = "Nils Amiet", email = "amietn@foobar.tld" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pillow==11.2.1",
    "numpy==2.2.6",
    "jinja2>=3.1.6,<4",
    "texttable>=1.6.7,<2",
    "parsedatetime~=2.6",
]

[project.scripts]
vcsi = "vcsi.vcsi:main"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "pytest-cov>=4.0.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
